--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.mvc.view.prefix=/jsps/
 spring.mvc.view.suffix=.jsp
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gstbilling
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=examly
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
